# DPT-Board-SERV

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  api.c  api.h  client.c  client.h  config.c  config.h  file.c  filedownload.c  filedownload.h  funders.h  helper.c  helper.h  listen.c  listen.h  logger.c  logger.h  longrunner.c  longrunner.h  main.c  main.h  mimetypes.h  uhttpd.h  utils.c  utils.h
bluecherry/: bluecherry.c  bluecherry.h  bluecherry_json_api.c  bluecherry_json_api.h
combus/: i2c.c  i2c.h  spi.c  spi.h
database/: database.c  database.h  db_keyvalue.c  db_keyvalue.h
display/: display_json_api.c  display_json_api.h  screen_ssd1306.c  screen_ssd1306.h
firmware/: firmware.c  firmware.h  firmware_dao.c  firmware_dao.h  firmware_json_api.c  firmware_json_api.h
gpio/: gpio.c  gpio.h  gpio_dao.c  gpio_dao.h  gpio_json_api.c  gpio_json_api.h
kunio/: kunio.c  kunio.h  kunio_json_api.c  kunio_json_api.h
network/: network.c  network.h
pwm/: pwm.c  pwm.h
rfid/pn532/: rfid_pn532.c  rfid_pn532.h  rfid_pn532_json_api.c  rfid_pn532_json_api.h
system/: system.c  system.h  system_json_api.c  system_json_api.h
tempsensor/: tempsensor.c  tempsensor.h  tempsensor_json_api.c  tempsensor_json_api.h
wifi/: nl.c  nl.h  wifi.c  wifi.h  wifi_json_api.c  wifi_json_api.h  wifi_longrunner.c  wifi_longrunner.h
